xfburn 0.4.0 (2008-11-XX)
============-------------

- Stop button works now
- Drag and drop into an audio composition now adds files in the correct order
- Check that the size of the burn run actually fits on the inserted disc
- Internal and string improvements

xfburn 0.3.91 (2008-11-03)
============-------------

- Use gstreamer to decompress any supported audio files to burn an audio CD ("gst" transcoder)
  NOTE: support for this is new, and not too unlikely to have some bugs ;-)
- Burn audio CDs from uncompressed CD audio .wav files ("basic" transcoder)
- Allow drags and drop from file managers like Thunar (text/uri-list target)
- Require HAL if compiled with HAL support
- Try to unmount a drive if it is not accessible (requires thunar-vfs)
- Build list of drives initially from HAL, then fill in details using libburn
  once the burn dialog shows up

xfburn 0.3.2 (2008-07-15)
============-------------

- Also set burn speed when burning an image
- Fix bug which would complain about missing speed list when blanking
  after the question from the burn composition dialog
- Bugfix: wait in main() to let the dialogs run when there is no main 
  window
- Update many translations

xfburn 0.3.1 (2008-07-10)
============-------------

- Implemented basic CLI options
- Actually set speed in burn backend

  WARNING: my dvd test burn failed if a speed was set!! CD was ok though.

  Use "Max" as speed if that is the case for you to get the old behavior,
  and _please_ report this as a bug! Please include the console output if
  debug is enabled, or otherwise some info on the burner that was used.
- Use fifo buffering, default is 4MB, adjustable in the preferences
- Preserve file attributes
- Now using threads for adding files, and the adding can get aborted
- If the burning dialog comes up with a full but erasable disc in the drive,
  prompt to show the blanking dialog

xfburn 0.3.0
============

- Use new libisofs API
- DVD burning