@@ -100,6 +100,7 @@ icons/32x32/Makefile
 icons/48x48/Makefile
 icons/scalable/Makefile
 po/Makefile.in
+desktop-integration/Makefile
 xfburn/Makefile
 ])
 	
