@@ -1,0 +1,12 @@
+desktopdir = $(datadir)/Thunar/sendto
+desktop_in_files = thunar-sendto-xfburn.desktop.in
+desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
+@INTLTOOL_DESKTOP_RULE@
+
+EXTRA_DIST =								\
+	$(desktop_in_files)
+
+DISTCLEANFILES =							\
+	$(desktop_DATA)
+
+# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
