@@ -1,0 +1,7 @@
+[Desktop Entry]
+Type=Application
+Version=1.0
+_Name=Data Composition
+Icon=media-cdrom
+TryExec=xfburn
+Exec=xfburn --data-composition %F
