@@ -37,6 +37,7 @@ xfburn/xfburn-transcoder-basic.c
 xfburn/xfburn-transcoder-gst.c
 xfburn/xfburn-transcoder.c
 
+desktop-integration/thunar-sendto-xfburn.desktop.in
 
 # files added by intltool-prepare.
 xfburn.desktop.in
