@@ -1,6 +1,10 @@
 xfburn 0.4.0 (2008-11-XX)
 ============-------------
 
+- Add an entry to Thunar's sendto menu for adding to a data composition
+  (thanks Mike Massonnet)
+- Add directories to a data composition with the correct timestamp 
+  (thanks JR Oldroyd for discovering this)
 - Stop button works now
 - Drag and drop into an audio composition now adds files in the correct order
 - Check that the size of the burn run actually fits on the inserted disc
